--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 <center>
-  <img src="Images/Zinja Studios Logo.jpg" alt="Logo Zinja Studios"
+  <img src="https://github.com/Denisiuso/TestPage/blob/main/Zinja%20Studios%20Logo.jpg" alt="Logo Zinja Studios"
    width="300" height="206.5"
   >
 </center>
